--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "remix setup node"
   },
   "dependencies": {
+    "@remix-run/cloudflare-pages": "^1.1.3",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "@remix-run/vercel": "^1.1.3",
@@ -26,7 +27,8 @@
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.18",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "wrangler": "^0.0.15"
   },
   "engines": {
     "node": ">=14"
