--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -o ./app/tailwind.css",
+    "build:vercel": "yarn setup:node && yarn build",
     "start": "yarn dev",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
@@ -16,6 +17,7 @@
   "dependencies": {
     "@remix-run/cloudflare-pages": "^1.1.3",
     "@remix-run/react": "^1.1.3",
+    "@remix-run/vercel": "^1.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1"
