--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "yarn dev",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
+    "dev:wrangler": "yarn setup:cf && yarn build && wrangler pages dev ./public --watch ./build --binding REVUE_SECRET_KEY=$REVUE_SECRET_KEY",
     "setup:node": "remix setup node",
     "setup:cf": "remix setup cloudflare-pages",
     "postinstall": "yarn setup:cf"
@@ -31,7 +32,9 @@
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.18",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "wrangler": "alpha"
+
   },
   "engines": {
     "node": ">=14"
