--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "dev:wrangler": "yarn setup:cf && yarn build && wrangler pages dev ./public --watch ./build --binding REVUE_SECRET_KEY=$REVUE_SECRET_KEY",
     "setup:node": "remix setup node",
     "setup:cf": "remix setup cloudflare-pages",
-    "postinstall": "yarn setup:cf"
+    "postinstall": "yarn setup:node"
   },
   "dependencies": {
     "@remix-run/cloudflare-pages": "^1.1.3",
     "@remix-run/react": "^1.1.3",
     "@remix-run/vercel": "^1.1.3",
+    "@remix-run/serve": "^1.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1"
