--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.18",
-    "typescript": "^4.1.2",
-    "wrangler": "alpha"
+    "typescript": "^4.1.2"
   },
   "engines": {
     "node": ">=14"
