--- a/landing/package.json
+++ b/landing/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -o ./app/tailwind.css",
-    "build:vercel": "yarn setup:node && yarn build",
+    "build:vercel": "yarn setup:node && yarn build && yarn embedWebsite",
+    "embedWebsite": "yarn workspace website build && cp -R ../website/build/** public",
     "start": "yarn dev",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
