--- a/website/newsletter/authors.yml
+++ b/website/newsletter/authors.yml
@@ -1,5 +1,5 @@
 slorber:
   name: Sébastien Lorber
-  title: Docusaurus maintainer
+  title: Newsletter Editor - Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
