fix vercel redirects?

--- a/landing/vercel.json
+++ b/landing/vercel.json
@@ -9,14 +9,14 @@
   },
   "redirects": [
     {
-      "source": "/:match*",
+      "source": "/:path*",
       "has": [
         {
           "type": "host",
           "value": "revue.thisweekinreact.com"
         }
       ],
-      "destination": "https://thisweekinreact.com/:match*",
+      "destination": "https://thisweekinreact.com/:path*",
       "permanent": true
     },
     {
