vercel redirect shouldn't prevent revue confirmation

--- a/landing/vercel.json
+++ b/landing/vercel.json
@@ -15,7 +15,7 @@
   ],
   "redirects": [
     {
-      "source": "/:path((?!subscribe/).*)",
+      "source": "/:path((?!subscribe).*)",
       "has": [
         {
           "type": "host",
