try to fix newsletter subscribe? :s

--- a/landing/vercel.json
+++ b/landing/vercel.json
@@ -11,9 +11,24 @@
     {
       "source": "/issues/:path*",
       "destination": "https://www.getrevue.co/profile/thisweekinreact/issues/:path*"
+    },
+    {
+      "source": "/subscribe",
+      "destination": "https://www.getrevue.co/profile/thisweekinreact/subscribe"
     }
   ],
   "redirects": [
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "revue.thisweekinreact.com"
+        }
+      ],
+      "destination": "https://thisweekinreact.com/:path*",
+      "permanent": true
+    },
     {
       "source": "/archive",
       "destination": "https://www.getrevue.co/profile/thisweekinreact",
