try to fix newsletter subscribe? :s

--- a/landing/vercel.json
+++ b/landing/vercel.json
@@ -15,6 +15,10 @@
     {
       "source": "/subscribe",
       "destination": "https://www.getrevue.co/profile/thisweekinreact/subscribe"
+    },
+    {
+      "source": "/commit_subscribe",
+      "destination": "https://www.getrevue.co/profile/thisweekinreact/commit_subscribe"
     }
   ],
   "redirects": [
