try to fix revue signup confirmation workflow

--- a/landing/vercel.json
+++ b/landing/vercel.json
@@ -19,6 +19,10 @@
     {
       "source": "/commit_subscribe",
       "destination": "https://www.getrevue.co/profile/thisweekinreact/commit_subscribe"
+    },
+    {
+      "source": "/add_subscriber",
+      "destination": "https://www.getrevue.co/profile/thisweekinreact/add_subscriber"
     }
   ],
   "redirects": [
