add title + redirects ck

--- a/landing/vercel.json
+++ b/landing/vercel.json
@@ -26,6 +26,11 @@
       "permanent": true
     },
     {
+      "source": "/convertkit",
+      "destination": "https://convertkit.com/?lmref=d0748g",
+      "permanent": true
+    },
+    {
       "source": "/archive",
       "destination": "https://www.getrevue.co/profile/thisweekinreact",
       "permanent": true
