--- a/landing/vercel.json
+++ b/landing/vercel.json
@@ -31,6 +31,11 @@
       "permanent": true
     },
     {
+      "source": "/revue",
+      "destination": "https://www.getrevue.co/profile/thisweekinreact",
+      "permanent": true
+    },
+    {
       "source": "/archive",
       "destination": "https://www.getrevue.co/profile/thisweekinreact",
       "permanent": true
