--- a/website/package.json
+++ b/website/package.json
@@ -15,10 +15,10 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
-    "@docusaurus/theme-common": "^2.2.0",
-    "@docusaurus/theme-live-codeblock": "^2.2.0",
+    "@docusaurus/core": "0.0.0-5363",
+    "@docusaurus/preset-classic": "0.0.0-5363",
+    "@docusaurus/theme-common": "0.0.0-5363",
+    "@docusaurus/theme-live-codeblock": "0.0.0-5363",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
