--- a/landing/vercel.json
+++ b/landing/vercel.json
@@ -15,6 +15,12 @@
       "permanent": false
     },
 
+    {
+      "source": "/blackfriday",
+      "destination": "/black-friday",
+      "permanent": true
+    },
+
 
     {
       "source": "/newsletter/220",
