--- a/conversion/package.json
+++ b/conversion/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "twitter-lite": "^1.1.0"
   }
 }
