Add peterpme testimonial

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "website"
   ],
   "scripts": {
+    "start": "yarn start:website",
     "start:landing": "yarn workspace landing start",
     "start:website": "yarn workspace website start",
-    "build:website": "yarn workspace website build"
+    "build:website": "yarn workspace website build",
+    "serve:website": "yarn workspace website serve"
   },
   "dependencies": {
   },
