Fix website TS errors + add vercel cli

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -2,6 +2,14 @@
   // This file is not used in compilation. It is here just for a nice editor experience.
   "extends": "@tsconfig/docusaurus/tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "."
-  }
+    "baseUrl": ".",
+    "moduleResolution": "Node16",
+    "types": [
+      "node",
+      "@docusaurus/module-type-aliases",
+      "@docusaurus/theme-classic",
+      "@docusaurus/theme-live-codeblock"
+    ]
+  },
+  "exclude": ["docusaurus.config.js"]
 }
