--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "build:website": "yarn workspace website build",
     "serve:website": "yarn workspace website serve"
   },
-  "dependencies": {
+  "resolutions": {
+    "**/ts-node": "10.9.1",
+    "**/typescript": "4.9.5"
   },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
@@ -31,6 +34,7 @@
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "typescript": "~4.8.2"
+    "typescript": "^4.9.5",
+    "vercel": "^28.16.2"
   }
 }
