--- a/website/package.json
+++ b/website/package.json
@@ -15,10 +15,10 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "0.0.0-5363",
-    "@docusaurus/preset-classic": "0.0.0-5363",
-    "@docusaurus/theme-common": "0.0.0-5363",
-    "@docusaurus/theme-live-codeblock": "0.0.0-5363",
+    "@docusaurus/core": "0.0.0-5492",
+    "@docusaurus/preset-classic": "0.0.0-5492",
+    "@docusaurus/theme-common": "0.0.0-5492",
+    "@docusaurus/theme-live-codeblock": "0.0.0-5492",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
@@ -29,8 +29,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1",
-    "@tsconfig/docusaurus": "^1.0.5",
-    "typescript": "^4.7.4"
+    "@tsconfig/docusaurus": "^1.0.5"
   },
   "browserslist": {
     "production": [
