--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/theme-common": "0.0.0-5492",
     "@docusaurus/theme-live-codeblock": "0.0.0-5492",
     "@mdx-js/react": "^1.6.22",
+    "@slorber/twitter-lite": "^1.1.2",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
