redirect /fr => /fr/ fix locale dropdown bug reporte in https://www.linkedin.com/feed/update/urn%3Ali%3Aactivity%3A7052588682586812416/?commentUrn=urn%3Ali%3Acomment%3A%28activity%3A7052588682586812416%2C7052608042529366017%29&dashCommentUrn=urn%3Ali%3Afsd%5Fcomment%3A%287052608042529366017%2Curn%3Ali%3Aactivity%3A7052588682586812416%29&replyUrn=urn%3Ali%3Acomment%3A%28activity%3A7052588682586812416%2C7052648668809560066%29&dashReplyUrn=urn%3Ali%3Afsd%5Fcomment%3A%287052648668809560066%2Curn%3Ali%3Aactivity%3A7052588682586812416%29&midToken=AQFhlQSp25jsHw&midSig=18K_znHm6lDWI1&trk=eml-email_notification_single_mentioned_you_in_this_01-notifications-1-hero%7Ecard%7Efeed&trkEmail=eml-email_notification_single_mentioned_you_in_this_01-notifications-1-hero%7Ecard%7Efeed-null-1ah4fd%7Elggnvkde%7Epx-null-voyagerOffline

--- a/website/vercel.json
+++ b/website/vercel.json
@@ -102,6 +102,12 @@
     },
 
     {
+      "source": "/fr",
+      "destination": "/fr/",
+      "permanent": true
+    },
+
+    {
       "source": "/fr/sponsor",
       "destination": "/sponsor",
       "permanent": false
