--- a/website/vercel.json
+++ b/website/vercel.json
@@ -76,6 +76,12 @@
     },
 
     {
+      "source": "/i",
+      "destination": "https://thisweekinreact.com/?utm_source=instagrap-profile",
+      "permanent": true
+    },
+
+    {
       "source": "/t",
       "destination": "https://thisweekinreact.com/?utm_source=twitter",
       "permanent": true
