--- a/conversion/package.json
+++ b/conversion/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "twitter": "^1.7.1",
-    "twitter-lite": "^1.1.0"
+    "twitter-lite": "^1.1.0",
+    "facebook-nodejs-business-sdk": "^17.0.3"
   }
 }
