--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "serve:website": "yarn workspace website serve"
   },
   "resolutions": {
-    "**/ts-node": "10.9.1",
-    "**/typescript": "4.9.5"
+    "**/ts-node": "10.9.1"
   },
   "dependencies": {},
   "devDependencies": {
@@ -32,7 +31,7 @@
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "typescript": "^4.9.5",
+    "typescript": "^5.2.2",
     "vercel": "^28.16.2"
   }
 }
