--- a/website/package.json
+++ b/website/package.json
@@ -15,25 +15,25 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "0.0.0-5492",
-    "@docusaurus/preset-classic": "0.0.0-5492",
-    "@docusaurus/theme-common": "0.0.0-5492",
-    "@docusaurus/theme-live-codeblock": "0.0.0-5492",
-    "@mdx-js/react": "^1.6.22",
+    "@docusaurus/core": "0.0.0-5658",
+    "@docusaurus/preset-classic": "0.0.0-5658",
+    "@docusaurus/theme-common": "0.0.0-5658",
+    "@docusaurus/theme-live-codeblock": "0.0.0-5658",
+    "@mdx-js/react": "^2.3.0",
     "@slorber/twitter-lite": "^1.1.2",
     "@vercel/edge": "^1.0.1",
     "clsx": "^1.2.1",
     "facebook-nodejs-business-sdk": "^17.0.3",
     "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "unist-util-visit": "^2.0.0",
-    "use-sync-external-store": "^1.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "unist-util-visit": "^2.0.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.1",
-    "@tsconfig/docusaurus": "^1.0.5",
-    "@types/facebook-nodejs-business-sdk": "^15.0.2"
+    "@docusaurus/module-type-aliases": "0.0.0-5658",
+    "@docusaurus/tsconfig": "0.0.0-5658",
+    "@types/facebook-nodejs-business-sdk": "^15.0.2",
+    "@types/react": "^18.2.21"
   },
   "browserslist": {
     "production": [
