--- a/website/package.json
+++ b/website/package.json
@@ -24,6 +24,7 @@
     "@vercel/edge": "^1.0.1",
     "clsx": "^1.2.1",
     "facebook-nodejs-business-sdk": "^17.0.3",
+    "posthog-js": "^1.91.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
