--- a/website/package.json
+++ b/website/package.json
@@ -21,6 +21,7 @@
     "@docusaurus/theme-live-codeblock": "0.0.0-5830",
     "@mdx-js/react": "^3.0.1",
     "@slorber/twitter-lite": "^1.1.2",
+    "@slorber/plugin-vercel-analytics": "^3.0.0",
     "@vercel/edge": "^1.0.1",
     "clsx": "^1.2.1",
     "facebook-nodejs-business-sdk": "^17.0.3",
