Use the right file

--- a/website/newsletter/authors.yml
+++ b/website/newsletter/authors.yml
@@ -3,3 +3,8 @@ slorber:
   title: Newsletter Editor - Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+bndkt:
+  name: Benedikt Müller
+  title: Indie Hacker
+  url: https://bndkt.com
+  image_url: https://github.com/bndkt.png
