--- a/website/newsletter/authors.yml
+++ b/website/newsletter/authors.yml
@@ -42,6 +42,7 @@ kacperkapusciak:
   page: true
   socials:
     x: kacperkapusciak
+    github: kacperkapusciak
 
 tomekzaw:
   name: Tomasz Zawadzki
@@ -51,6 +52,6 @@ tomekzaw:
   page: true
   socials:
     x: tomekzaw_
-
+    github: tomekzaw
 # Note: don't forget to add newly added authors to the localized authors files
 # i18n/fr/docusaurus-plugin-content-blog-articles/authors.yml file
