--- a/website/newsletter/authors.yml
+++ b/website/newsletter/authors.yml
@@ -104,5 +104,17 @@ piaskowyk:
     github: piaskowyk
     linkedin: krzysztof-piaskowy
 
+filipkaminski:
+  name: Filip Kamiński
+  title: Software Engineer - Software Mansion
+  url: https://x.com/FilipKaminski
+  image_url: https://pbs.twimg.com/profile_images/1933203713339904000/cvSRnMD__400x400.jpg
+  page: true
+  socials:
+    x: FilipKaminski
+    bluesky: filipkaminski.com
+    github: filip131311
+    linkedin: filip-kamiński-6987a0210
+
 # Note: don't forget to add newly added authors to the localized authors files
 # i18n/fr/docusaurus-plugin-content-blog-articles/authors.yml file
